
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int packet_sock_kmalloc () ;

void kmalloc_pad(int count) {
 int i;
 for (i = 0; i < count; i++)
  packet_sock_kmalloc();
}
